# search_engine

./: .gitignore  CMakeLists.txt  README.md  requests.json
Conf/: config.json  requests.json
Qt_Vers/: CMakeLists.txt  qt_main.cpp  qt_main.h
incl/: Converter_JSON.h  Inverted_Index.h  Search_Server.h  gTest.h
src/: CMakeLists.txt  Converter_JSON.cpp  Inverted_Index.cpp  Search_Server.cpp  main.cpp  test.cpp
tests/: CMakeLists.txt  gTest_Index.h  gTest_Searc.h  test.cpp
